# IsaacLab-Imitation

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  REPO_SETUP.md  pixi.toml
source/isaaclab_imitation/: pyproject.toml  setup.py  test_g1_backend_joint_contract.py  test_g1_metrics_contract.py  test_policy_supervision_contract.py  test_rlopt_runtime_bootstrap.py  test_sonic_adaptive_sampling.py  test_unitree_joint_order.py
source/isaaclab_imitation/isaaclab_imitation/: __init__.py
source/isaaclab_imitation/isaaclab_imitation/assets/: __init__.py
source/isaaclab_imitation/isaaclab_imitation/assets/robots/: __init__.py  unitree.py  unitree_joint_order.py
source/isaaclab_imitation/isaaclab_imitation/assets/unitree/g1_description/: README.md
source/isaaclab_imitation/isaaclab_imitation/envs/: imitation_rl_env.py  rlopt.py  sonic_adaptive_sampling.py
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/: imitation_env_cfg.py  lafan1_manifest.py
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/config/g1/: __init__.py  imitation_g1_env_cfg.py  imitation_g1_latent_env_cfg.py  imitation_g1_latent_vqvae_env_cfg.py
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/config/g1/agents/: rlopt_amp_cfg.py  rlopt_ase_cfg.py  rlopt_fastsac_cfg.py  rlopt_gail_cfg.py  rlopt_ipmd_bilinear_cfg.py  rlopt_ipmd_cfg.py  (+4 more)
source/isaaclab_imitation/isaaclab_imitation/tasks/manager_based/imitation/mdp/: __init__.py  curriculums.py  events.py  observations.py  rewards.py  terminations.py
(+139 files in other folders)
