[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

# Prefer in-repo submodules. Optional loaders should resolve through the active
# environment or explicit local overrides instead of default type-check paths.
[tool.pyrefly]
search-path = [
    "isaaclab_imitation",
    "../../IsaacLab/source/isaaclab",
    "../../IsaacLab/source/isaaclab_tasks",
    "../../IsaacLab/source/isaaclab_assets",
    "../../IsaacLab/source/isaaclab_mimic",
    "../../IsaacLab/source/isaaclab_rl",
    "../../RLOpt",
    "../../ImitationLearningTools",
]
disable-type-errors-in-ide = false
